--- a/services/host/package.json
+++ b/services/host/package.json
@@ -1,7 +1,21 @@
 {
-  "name": "@packages/build-config",
+  "name": "host",
   "version": "1.0.0",
-  "main": "./src/index.ts",
+  "dependencies": {
+    "@packages/shared": "*",
+    "@packages/build-config": "*",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.23.1"
+  },
+  "scripts": {
+    "start": "webpack serve --env mode=development",
+    "build:dev": "webpack --env mode=development",
+    "build:prod": "webpack --env mode=production",
+    "build:mobile": "webpack --env mode=production --env platform=mobile",
+    "build:desktop": "webpack --env mode=production --env platform=desktop",
+    "typecheck": "tsc"
+  },
   "devDependencies": {
     "@babel/core": "^7.24.7",
     "@babel/preset-react": "^7.24.7",
@@ -10,6 +24,8 @@
     "@svgr/webpack": "^8.1.0",
     "@types/babel__core": "^7.20.5",
     "@types/node": "^20.14.6",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "@types/webpack": "^5.28.5",
     "@types/webpack-bundle-analyzer": "^4.7.0",
     "@types/webpack-dev-server": "^4.7.2",
